--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,9 +18,13 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+      - name: Checkout Auto-GPT
+        run: |
+          git submodule update --init
       - name: Install the dependencies
         run: |
           python -m pip install -r requirements.txt
+          python -m pip install -r content/Auto-GPT/requirements.txt
       - name: Build the JupyterLite site
         run: |
           cp README.md content
