--- a/jupyter_lite_config.json
+++ b/jupyter_lite_config.json
@@ -1,3 +1,1 @@
-"ContentsManager": {
-                        "allow_hidden": true
-                    }
+"ContentsManager": {"allow_hidden": true}
